# ai-gateway

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  SETUP.md  ai-gateway.bat  ai-gateway.sh  docker-compose.yml  gateway-loadtest.toml  gateway.toml.example  seed_analytics.py  serve-dashboard.ps1
crates/gateway-cache/: Cargo.toml
crates/gateway-cache/src/: exact.rs  key.rs  lib.rs  semantic.rs
crates/gateway-cache/tests/: ttl_probe.rs
crates/gateway-config/: Cargo.toml
crates/gateway-config/src/: error.rs  hot_reload.rs  lib.rs  types.rs
crates/gateway-config/tests/: parsing.rs
crates/gateway-core/: Cargo.toml
crates/gateway-core/src/: error.rs  handlers.rs  lib.rs  main.rs  marketing.rs  mcp.rs  middleware.rs  perf.rs  router.rs  state.rs  updates.rs
crates/gateway-core/tests/: analytics.rs  auth.rs  cache.rs  content_shield.rs  database.rs  guardrails.rs  mcp.rs  routes_disabled.rs  routing.rs  routing_fallback.rs
crates/gateway-eval/: Cargo.toml
crates/gateway-eval/src/: lib.rs  main.rs
crates/gateway-providers/: Cargo.toml
crates/gateway-providers/src/: anthropic.rs  error.rs  gemini.rs  lib.rs  openai.rs  registry.rs  types.rs
crates/gateway-providers/tests/: registry.rs
crates/gateway-storage/: Cargo.toml
crates/gateway-storage/migrations/: 0001_requests.sql  0002_metrics.sql  0003_cache_hits.sql  0004_guardrails.sql  0005_api_keys.sql  0006_flags.sql
crates/gateway-storage/src/: lib.rs  logger.rs  models.rs  queries.rs
crates/gateway-storage/tests/: storage.rs
crates/gateway-telemetry/: Cargo.toml
crates/gateway-telemetry/src/: metrics.rs  tracing_setup.rs
crates/gateway-telemetry/tests/: metrics.rs
crates/gateway-test-utils/: Cargo.toml
crates/gateway-test-utils/src/: harness.rs  lib.rs  mock_provider.rs
crates/mock-server/: Cargo.toml
crates/mock-server/src/: lib.rs  main.rs
crates/mock-server/tests/: usage.rs
dashboard/: package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/app/access/: page.tsx
dashboard/src/app/analytics/: layout.tsx  page.tsx
dashboard/src/app/analytics/cache/: page.tsx
dashboard/src/app/analytics/cost/: page.tsx
dashboard/src/app/analytics/mcp/: page.tsx
dashboard/src/app/analytics/models/: page.tsx
dashboard/src/app/analytics/providers/: page.tsx
dashboard/src/app/analytics/requests/: page.tsx
dashboard/src/app/content-shield/: ContentShieldClient.tsx  page.tsx
dashboard/src/app/guardrails/: GuardrailsClient.tsx  page.tsx
dashboard/src/app/login/: page.tsx
dashboard/src/app/logs/: page.tsx
dashboard/src/app/mcp/: page.tsx
dashboard/src/app/playground/: page.tsx
dashboard/src/app/providers/: page.tsx
dashboard/src/app/routing/: page.tsx
dashboard/src/app/settings/: page.tsx
dashboard/src/components/: AuthProvider.tsx  DateRangePicker.tsx  GlassCard.tsx  McpRoutingCanvas.tsx  RoutingCanvas.tsx  Sidebar.tsx  StatCard.tsx  ThemeProvider.tsx  TopBar.tsx  TryApi.tsx
dashboard/src/lib/: analytics-context.tsx  api.ts  auth.ts  config.ts  fetch-interceptor.ts  mockData.ts  vendors.ts
docs/perf/: perf-report.json  perf-report.md
tools/update-manager/: publish.sh
