[package]
name = "gateway-core"
version.workspace = true
edition.workspace = true

[lib]
name = "gateway_core"
path = "src/lib.rs"

[[bin]]
name = "ai-gateway"
path = "src/main.rs"

[dependencies]
gateway-config = { path = "../gateway-config" }
gateway-providers = { path = "../gateway-providers" }
gateway-cache = { path = "../gateway-cache" }
gateway-telemetry = { path = "../gateway-telemetry" }
gateway-storage = { path = "../gateway-storage" }

tokio = { workspace = true }
tokio-stream = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
sqlx = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
lettre = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }

[dev-dependencies]
gateway-test-utils = { path = "../gateway-test-utils" }
tokio = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
