[package]
name = "gateway-eval"
version.workspace = true
edition.workspace = true

[lib]
name = "gateway_eval"
path = "src/lib.rs"

[[bin]]
name = "gateway-eval"
path = "src/main.rs"

[dependencies]
gateway-core      = { path = "../gateway-core" }
gateway-config    = { path = "../gateway-config" }
gateway-storage   = { path = "../gateway-storage" }
gateway-cache     = { path = "../gateway-cache" }
gateway-providers = { path = "../gateway-providers" }
gateway-test-utils = { path = "../gateway-test-utils" }

tokio        = { workspace = true }
reqwest      = { workspace = true }
serde        = { workspace = true }
serde_json   = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
tracing-subscriber = { workspace = true }
clap         = { version = "4", features = ["derive"] }
sqlx         = { workspace = true }
once_cell    = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
