[package]
name = "gateway-telemetry"
version.workspace = true
edition.workspace = true

[dependencies]
gateway-config = { path = "../gateway-config" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
prometheus = { workspace = true }
anyhow = { workspace = true }
once_cell = "1"
