[package]
name = "mock-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mock-server"
path = "src/main.rs"

[dependencies]
tokio      = { workspace = true }
axum       = { workspace = true }
serde_json = { workspace = true }
serde      = { workspace = true }
uuid       = { workspace = true }
chrono     = { workspace = true }
clap       = { version = "4", features = ["derive"] }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
